tests/rosetta/out/Rust/call-a-function-3.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/call-a-function-3.rs:4:24
  |
4 |         return vec![0, 0.0];
  |                        ^^^ expected `i32`, found floating-point number

warning: unused variable: `a`
 --> /tmp/call-a-function-3.rs:6:10
  |
6 |     fn g(a: i32, b: f64) -> i32 {
  |          ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `b`
 --> /tmp/call-a-function-3.rs:6:18
  |
6 |     fn g(a: i32, b: f64) -> i32 {
  |                  ^ help: if this is intentional, prefix it with an underscore: `_b`

warning: unused variable: `s`
 --> /tmp/call-a-function-3.rs:9:10
  |
9 |     fn h(s: &'static str, nums: Vec<i32>) -> () {
  |          ^ help: if this is intentional, prefix it with an underscore: `_s`

warning: unused variable: `nums`
 --> /tmp/call-a-function-3.rs:9:27
  |
9 |     fn h(s: &'static str, nums: Vec<i32>) -> () {
  |                           ^^^^ help: if this is intentional, prefix it with an underscore: `_nums`

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0308`.
