tests/rosetta/out/Rust/call-a-function-3.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn f() -> Vec<i32> {
        return vec![0, 0.0];
    }
    fn g(a: i32, b: f64) -> i32 {
        return 0;
    }
    fn h(s: &'static str, nums: Vec<i32>) -> () {
    }
    fn main() -> () {
        h("ex1", vec![]);
        h("ex2", vec![1, 2]);
        h("ex3", vec![1, 2, 3, 4]);
        let list = vec![1, 2, 3, 4];
        h("ex4", list);
    }
    main();
}
